geolog-lang/test/mathieu.output
-- tokens
Decl theory (0:6)
AIdent MathieuTemplate (7:22)
SKeyword := (23:25)
Block sig (26:29)
Nl (29:30)
AIdent Point (32:37)
SKeyword : (38:39)
AKeyword Query (40:45)
Nl (45:46)
AIdent Quad (48:52)
SKeyword : (53:54)
AKeyword Query (55:60)
Nl (63:102)
AIdent q0 (130:132)
SKeyword : (133:134)
AIdent Quad (135:139)
SKeyword -> (140:142)
AIdent Point (143:148)
Nl (148:149)
AIdent q1 (151:153)
SKeyword : (154:155)
AIdent Quad (156:160)
SKeyword -> (161:163)
AIdent Point (164:169)
Nl (169:170)
AIdent q2 (172:174)
SKeyword : (175:176)
AIdent Quad (177:181)
SKeyword -> (182:184)
AIdent Point (185:190)
Nl (190:191)
AIdent q3 (193:195)
SKeyword : (196:197)
AIdent Quad (198:202)
SKeyword -> (203:205)
AIdent Point (206:211)
Nl (211:212)
Nl (212:213)
AIdent act (232:235)
SKeyword : (236:237)
AIdent Quad (238:242)
SKeyword -> (243:245)
AIdent Point (246:251)
SKeyword -> (252:254)
AIdent Point (255:260)
Nl (260:261)
Nl (261:262)
AIdent mul (289:292)
SKeyword : (293:294)
AIdent Quad (295:299)
SKeyword -> (300:302)
AIdent Quad (303:307)
SKeyword -> (308:310)
AIdent Quad (311:315)
Nl (315:316)
Nl (316:317)
Nl (319:490)
Nl (492:510)
Nl (512:784)
Nl (786:1177)
Nl (1179:1349)
AIdent ax/act_mul (1386:1396)
SKeyword : (1397:1398)
LParen (1399:1400)
AIdent q (1400:1401)
SKeyword : (1402:1403)
AIdent Quad (1404:1408)
RParen (1408:1409)
SKeyword -> (1410:1412)
LParen (1413:1414)
AIdent r (1414:1415)
SKeyword : (1416:1417)
AIdent Quad (1418:1422)
RParen (1422:1423)
SKeyword -> (1424:1426)
AIdent p (1427:1428)
SKeyword : (1429:1430)
AIdent Point (1431:1436)
SKeyword -> (1437:1439)
AIdent act (1440:1443)
LParen (1444:1445)
AIdent mul (1445:1448)
AIdent q (1449:1450)
AIdent r (1451:1452)
RParen (1452:1453)
AIdent p (1454:1455)
SKeyword = (1456:1457)
AIdent act (1458:1461)
AIdent q (1462:1463)
LParen (1464:1465)
AIdent act (1465:1468)
AIdent r (1469:1470)
AIdent p (1471:1472)
RParen (1472:1473)
Nl (1473:1474)
Nl (1474:1475)
AIdent ax/mul_assoc (1513:1525)
SKeyword : (1526:1527)
LParen (1528:1529)
AIdent q (1529:1530)
SKeyword : (1531:1532)
AIdent Quad (1533:1537)
RParen (1537:1538)
SKeyword -> (1539:1541)
LParen (1542:1543)
AIdent r (1543:1544)
SKeyword : (1545:1546)
AIdent Quad (1547:1551)
RParen (1551:1552)
SKeyword -> (1553:1555)
LParen (1556:1557)
AIdent s (1557:1558)
SKeyword : (1559:1560)
AIdent Quad (1561:1565)
RParen (1565:1566)
SKeyword -> (1567:1569)
AIdent mul (1570:1573)
LParen (1574:1575)
AIdent mul (1575:1578)
AIdent q (1579:1580)
AIdent r (1581:1582)
RParen (1582:1583)
AIdent s (1584:1585)
SKeyword = (1587:1588)
AIdent mul (1589:1592)
AIdent q (1593:1594)
LParen (1595:1596)
AIdent mul (1596:1599)
AIdent r (1600:1601)
AIdent s (1602:1603)
RParen (1603:1604)
Nl (1604:1605)
Nl (1605:1606)
Nl (1606:1697)
End end (1697:1700)
Nl (1700:1701)
Nl (1701:1702)
Nl (1702:2073)
Eof (2073:2073)

-- notation
Decl theory (0:1700)
  Infix (7:1700)
    Ident MathieuTemplate (7:22)
    Keyword := (23:25)
    Block sig (26:1700)
      Infix (32:45)
        Ident Point (32:37)
        Keyword : (38:39)
        Keyword Query (40:45)
      Infix (48:60)
        Ident Quad (48:52)
        Keyword : (53:54)
        Keyword Query (55:60)
      Infix (130:148)
        Ident q0 (130:132)
        Keyword : (133:134)
        Infix (135:148)
          Ident Quad (135:139)
          Keyword -> (140:142)
          Ident Point (143:148)
      Infix (151:169)
        Ident q1 (151:153)
        Keyword : (154:155)
        Infix (156:169)
          Ident Quad (156:160)
          Keyword -> (161:163)
          Ident Point (164:169)
      Infix (172:190)
        Ident q2 (172:174)
        Keyword : (175:176)
        Infix (177:190)
          Ident Quad (177:181)
          Keyword -> (182:184)
          Ident Point (185:190)
      Infix (193:211)
        Ident q3 (193:195)
        Keyword : (196:197)
        Infix (198:211)
          Ident Quad (198:202)
          Keyword -> (203:205)
          Ident Point (206:211)
      Infix (232:260)
        Ident act (232:235)
        Keyword : (236:237)
        Infix (238:260)
          Ident Quad (238:242)
          Keyword -> (243:245)
          Infix (246:260)
            Ident Point (246:251)
            Keyword -> (252:254)
            Ident Point (255:260)
      Infix (289:315)
        Ident mul (289:292)
        Keyword : (293:294)
        Infix (295:315)
          Ident Quad (295:299)
          Keyword -> (300:302)
          Infix (303:315)
            Ident Quad (303:307)
            Keyword -> (308:310)
            Ident Quad (311:315)
      Infix (1386:1472)
        Infix (1386:1428)
          Ident ax/act_mul (1386:1396)
          Keyword : (1397:1398)
          Infix (1400:1428)
            Infix (1400:1408)
              Ident q (1400:1401)
              Keyword : (1402:1403)
              Ident Quad (1404:1408)
            Keyword -> (1410:1412)
            Infix (1414:1428)
              Infix (1414:1422)
                Ident r (1414:1415)
                Keyword : (1416:1417)
                Ident Quad (1418:1422)
              Keyword -> (1424:1426)
              Ident p (1427:1428)
        Keyword : (1429:1430)
        Infix (1431:1472)
          Ident Point (1431:1436)
          Keyword -> (1437:1439)
          Infix (1440:1472)
            App (1440:1455)
              Ident act (1440:1443)
              App (1445:1452)
                Ident mul (1445:1448)
                Ident q (1449:1450)
                Ident r (1451:1452)
              Ident p (1454:1455)
            Keyword = (1456:1457)
            App (1458:1472)
              Ident act (1458:1461)
              Ident q (1462:1463)
              App (1465:1472)
                Ident act (1465:1468)
                Ident r (1469:1470)
                Ident p (1471:1472)
      Infix (1513:1603)
        Ident ax/mul_assoc (1513:1525)
        Keyword : (1526:1527)
        Infix (1529:1603)
          Infix (1529:1537)
            Ident q (1529:1530)
            Keyword : (1531:1532)
            Ident Quad (1533:1537)
          Keyword -> (1539:1541)
          Infix (1543:1603)
            Infix (1543:1551)
              Ident r (1543:1544)
              Keyword : (1545:1546)
              Ident Quad (1547:1551)
            Keyword -> (1553:1555)
            Infix (1557:1603)
              Infix (1557:1565)
                Ident s (1557:1558)
                Keyword : (1559:1560)
                Ident Quad (1561:1565)
              Keyword -> (1567:1569)
              Infix (1570:1603)
                App (1570:1585)
                  Ident mul (1570:1573)
                  App (1575:1582)
                    Ident mul (1575:1578)
                    Ident q (1579:1580)
                    Ident r (1581:1582)
                  Ident s (1584:1585)
                Keyword = (1587:1588)
                App (1589:1603)
                  Ident mul (1589:1592)
                  Ident q (1593:1594)
                  App (1596:1603)
                    Ident mul (1596:1599)
                    Ident r (1600:1601)
                    Ident s (1602:1603)

-- elaborated


-- messages

error[E0102]: Incompatible precedences
46 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
46 |                                              ^

error[E0208]: unexpected notation for binding: Infix
46 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
46 |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
